# realtime-audio-analysis-module

./: .gitignore  .npmignore  AUDIO_PERMISSION_FIX.md  COMPLETE_SOLUTION.md  DEBUG_CRASH_SOLUTION.md  DEBUG_NATIVE_MODULES.js  EMERGENCY_FIX.md  EMERGENCY_FIX_CORRECTED.md  FILES_SUMMARY.md  FINAL_TESTING_INSTRUCTIONS.md  INTEGRATION_GUIDE.md  LINKING_FIX_SUMMARY.md  LOCAL_INSTALL.md  LOCAL_INSTALLATION_FIX.md  MODULE_REGISTRY_AUDIT.md  MainApplication-examples.md  NATIVE_LINKING_FIX.md  NATIVE_MODULE_DEBUG_SOLUTION.md  PATH_CONFIGURATION.md  PermissionHelper.js  QUICK_FIX.md  README.md  RealtimeAudioAnalyzer.podspec  SETUP_FILES_FOR_RN_APP.md  SimpleAudioTest.js  TestAudioModule.js  TestModuleLinking.js  TestScreen.tsx  UPDATE_MODULE_IN_RN_APP.md  UpdatedRealtimeAudioAnalyzer.js  UpdatedSimpleModuleTest.js  VERIFY_LINKING.md  check-module-setup.js  complete-fix.sh  create-working-module.js  debug-module-linking.js  example-usage.tsx  final-fix.js  fix-and-update-module.sh  fix-build-gradle.sh  (+15 more)
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: audio-analysis-jni.cpp
android/src/main/cpp/kiss_fft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
android/src/main/java/com/realtimeaudio/: AudioAnalyzerDemoActivity.kt  AudioEngine.kt  RealtimeAudioAnalyzerModule.kt  RealtimeAudioAnalyzerPackage.kt
docs/: API_REFERENCE.md  AUTOLINKING.md  CLI_USAGE.md  COMPLETE_API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  JAVASCRIPT_INTERFACE_FIX.md  LINKING_AUDIT_REPORT.md  LINKING_FIX_SUMMARY.md  LINKING_ISSUE_RESOLUTION.md  LOCAL_INSTALL.md  LOCAL_INSTALLATION_FIX.md  MANUAL_LINKING.md  MANUAL_MAINAPP_FIX.md  PATH_CONFIGURATION.md  QUICK_FIX.md  QUICK_START.md  (+7 more)
(+167 files in other folders)
